--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,7 @@
 * {
   margin: 0;
   padding: 0;  
+  font-family: "Arial", Times, serif;
 }
 
 body{
@@ -49,6 +50,11 @@ body{
    
 
 }
+.chk-item{
+  color:white; 
+  margin:0px 10px 0px 10px;
+}
+
 .center {
   border: 2px solid rgb(0, 0, 246);
   border-radius: 10px;
@@ -71,7 +77,7 @@ body{
     background-color: rgb(14, 0, 209);
     width:   calc(100% - 5px);
     font-size: 20px;
-    font-family: "Arial", Times, serif;
+    
   }
   
   li {
